--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -1,42 +1,56 @@
 name: MacOS SSH to GitHub Actions
 
 on:
+  push:
+    branches: [ main ]
+    paths-ignore: 'README.md'
   workflow_dispatch:
 
 jobs:
   ssh:
     runs-on: macos-11.0
 
+    env:
+      # Change These If You Are Forking The Repo
+      GitHubMail: "fahimahmad904@gmail.com"
+      GitHubName: "devil-black-786"
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: SSH Keepalive Hack
+    - name: Set Git Configs & Secrets
       run: |
-        mkdir -p ~/.ssh
-        cat << EOF > ~/.ssh/config
-        Host *
-            ServerAliveInterval 60
-            StrictHostKeyChecking no
-        Host github.com
-            User git
-            Port 22
-            Hostname github.com
-            TCPKeepAlive yes
-            IdentitiesOnly yes
-        EOF
+        git config --global user.email ${GitHubMail}
+        git config --global user.name ${GitHubName}
+        git config --global color.ui true
+        git config --global credential.helper store
+        echo "https://${GitHubName}:${{ secrets.GH_TOKEN }}@github.com" > ~/.git-credentials
+    # Either use ngrok method or tmate method
     - name: Start SSH via ngrok
       continue-on-error: true
-      timeout-minutes: 350
+      timeout-minutes: 340
       uses: P3TERX/ssh2actions@main
       with:
         mode: ngrok
       env:
         # You can find this token here: https://dashboard.ngrok.com/auth/your-authtoken
-        NGROK_TOKEN: 1nbtQvCTEQSQJ2gm8WBQa7nERig_2YwQc3mj9ZfweAS1jVgQz
+        NGROK_TOKEN: ${{ secrets.NGROK_TOKEN }}
         # ngrok server region [us, eu, au, ap, sa, jp, in] (optional, default: us)
         NGROK_REGION: us
         # This password you will use when authorizing via SSH
-        SSH_PASSWORD: devil68
+        SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
         # Send connection info to Telegram (optional)
         #TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
         #TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+    #- name: Start SSH via tmate
+    #  uses: P3TERX/ssh2actions@main
+    #  # Send connection info to Telegram (optional)
+    #  env:
+    #    TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+    #    TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+    - name: Self Looping
+      run: |
+        git clone https://${GitHubName}:${{ secrets.GH_TOKEN }}@github.com/${GITHUB_REPOSITORY} loop
+        cd loop || exit 1
+        echo $(( RANDOM - ( RANDOM % RANDOM ) )) > looper.txt
+        git add looper.txt
+        git commit -m "Looping at $(date -u +%D-%T%P)"
+        git push -q https://${{ secrets.GH_TOKEN }}@github.com/${GITHUB_REPOSITORY} HEAD:main
